--- a/index.css
+++ b/index.css
@@ -6,17 +6,28 @@
 @media (prefers-color-scheme: dark) {
   :root {
     color-scheme: dark;
-
     --background-color: #11223d;
     --color: #d2d3e7;
   }
 }
 
 body, html {
-  font-family: sans-serif;
+  font-family: system-ui, sans-serif;
   background-color: var(--background-color);
   color: var(--color);
   text-align: center;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+body {
+  background: linear-gradient(rgba(255,255,255,0.9), rgba(255,255,255,0.9)), url('noframework.png');
+  background-repeat: no-repeat;
+  background-position: top right;
+  background-size: 200px;
+  background-attachment: fixed;
+  width: 100%;
+  padding: 1em;
 }
 
 a {
@@ -24,13 +35,19 @@ a {
 }
 
 h1 {
-  font-size: 4em;
+  font-size: 3.5em;
+  position: sticky;
+  top: 0;
 }
 
-img {
-  max-width: 100%;
+.logo {
+  width: auto;
   height: 100%;
+  max-height: 200px;
 }
 .no {
-  color: red;
+  color: green;
+}
+section {
+  text-align: left;
 }
