--- a/index.css
+++ b/index.css
@@ -21,7 +21,7 @@ body, html {
   box-sizing: border-box;
 }
 body {
-  background: linear-gradient(rgba(255,255,255,0.9), rgba(255,255,255,0.9)), url('noframework.png');
+  background: linear-gradient(rgba(255,255,255,0.9), rgba(255,255,255,0.9)), url('/logo.png');
   background-repeat: no-repeat;
   background-position: top right;
   background-size: 200px;
