--- a/index.css
+++ b/index.css
@@ -71,7 +71,11 @@ section {
   }
 
   body {
-    background: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)), url('/logo.png');
+    background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url('/logo.png');
+    background-repeat: no-repeat;
+    background-position: top right;
+    background-size: 200px;
+    background-attachment: fixed;
   }
 }
 
