add some success stories

--- a/how/component/index.html
+++ b/how/component/index.html
@@ -1,5 +1,5 @@
 <!--#include virtual="/_build/content/header-start.html" -->
-<title>How build software using Web Components</title>
+<title>How to build software using Web Components</title>
 <!--#include virtual="/_build/content/header-end.html" -->
 <details>
   <summary>Code web components</summary>
