add default view transitions

--- a/index.css
+++ b/index.css
@@ -64,6 +64,16 @@ section {
   text-align: left;
 }
 
+@view-transition {
+  navigation: auto;
+}
+
+@media (prefers-reduced-motion: reduce) {
+  * {
+    view-transition-name: unset !important;
+  }
+}
+
 @media (prefers-color-scheme: dark) {
   :root {
     color-scheme: dark;
@@ -80,4 +90,3 @@ section {
     background-attachment: fixed;
   }
 }
-
